# hedera-services

./: .circleci.settings.xml  .dockerignore  .env  .gitignore  .gitignore.hedera  .gitignore.platform  .pre-commit-config.yaml  .releaserc  .releaserc.json  .remarkrc  .snyk  ADOPTER.md  ADOPTERS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Glossary.md  README-2.md  README.md  build.gradle.kts  codecov.yml  compose-build.sh  developers.properties  docker-compose-ci.yml  docker-compose.yml  gha-creds-0b58e21bf1001764.json  gha-creds-14963b4025c20548.json  gha-creds-42b70c33f3f40f95.json  gha-creds-b35ea88a04895ab4.json  gha-creds-c69cd6cc7a4abca6.json  gha-creds-cd8812161112114b.json  gha-creds-fc08c564fe188359.json  gradle.properties  logback.xml  merge_java_files.sh  mvnw  nuke-gradle-from-orbit.sh  pom.xml  proto.sh  (+2 more)
platform-sdk/swirlds-pairings-bls12381-impl/: Cargo.toml  build.gradle.kts  rust-toolchain.toml
platform-sdk/swirlds-pairings-bls12381-impl/src/main/java/: module-info.java
platform-sdk/swirlds-pairings-bls12381-impl/src/main/java/com/swirlds/pairings/bls12381/impl/: Bls12381BilinearPairing.java  Bls12381Exception.java  Bls12381Field.java  Bls12381FieldElement.java  Bls12381Group1.java  Bls12381Group1Element.java  Bls12381Group2.java  Bls12381Group2Element.java  Bls12381PairingResult.java  Utils.java
platform-sdk/swirlds-pairings-bls12381-impl/src/main/java/com/swirlds/pairings/bls12381/impl/jni/: Bls12381Bindings.java
platform-sdk/swirlds-pairings-bls12381-impl/src/main/rust/: common.rs  g1.rs  g2.rs  lib.rs  pairing.rs  scalar.rs
(+34730 files in other folders)
